--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.8"
   },
