--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2",
