--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "api:generate": "openapi --input \"../server/docs/Expense Tracker API.yaml\" --output src/api --client axios"
   },
   "dependencies": {
+    "@nivo/core": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/vite": "^4.1.11",
     "@vercel/analytics": "^1.5.0",
