--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,11 @@
     "api:generate": "openapi --input \"../server/docs/Expense Tracker API.yaml\" --output src/api --client axios"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-charts": "^8.10.2",
+    "@nivo/bar": "^0.99.0",
     "@nivo/core": "^0.99.0",
     "@nivo/pie": "^0.99.0",
     "@radix-ui/react-icons": "^1.3.2",
