docs(server): Update with all google oauth variables

--- a/server/.env.example
+++ b/server/.env.example
@@ -18,6 +18,17 @@ DATABASE_URL=postgres://<username>:<password>@localhost:5432/<database>
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
+# Frontend URL (used for redirects after OAuth); falls back to CORS_ORIGIN if not set
+FRONTEND_URL=http://localhost:5173
+
 # CORS Configuration (frontend url)
 CORS_ORIGIN=http://localhost:5173
+
+# Google OAuth
+# Create OAuth 2.0 Client ID (Web) at https://console.cloud.google.com/apis/credentials
+# Authorized redirect URI must include:
+#   http://localhost:8080/api/auth/google/callback
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_OAUTH_TIMEOUT_MS=10000
 
