--- a/server/package.json
+++ b/server/package.json
@@ -22,15 +22,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "cookie-parser": "^1.4.6",
     "validator": "^13.11.0"
   },
   "devDependencies": {
