--- a/server/docs/Expense Tracker API.yaml
+++ b/server/docs/Expense Tracker API.yaml
@@ -380,3 +380,73 @@ paths:
       responses:
         "200":
           description: Profile info
+    patch:
+      summary: Update user profile
+      description: Update username for the authenticated user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [username]
+              properties:
+                username:
+                  type: string
+                  minLength: 3
+                  maxLength: 50
+                  pattern: '^[A-Za-z0-9_-]{3,50}$'
+      responses:
+        "200":
+          description: Public user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'
+        "400":
+          description: Invalid username
+        "401":
+          description: Unauthorized
+        "409":
+          description: Username already taken
+
+  /auth/me:
+    get:
+      summary: Get current authenticated user
+      responses:
+        "200":
+          description: Public user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'
+        "401":
+          description: Unauthorized
+
+  /auth/logout:
+    post:
+      summary: Logout current session
+      responses:
+        "204":
+          description: No Content
+
+components:
+  schemas:
+    PublicUser:
+      type: object
+      required: [user_id, email, created_at]
+      properties:
+        user_id:
+          type: integer
+        email:
+          type: string
+          format: email
+        username:
+          type: [string, 'null']
+        firstname:
+          type: [string, 'null']
+        lastname:
+          type: [string, 'null']
+        created_at:
+          type: string
+          format: date-time
