Feat/UI/auth (#28)
* chore: add .vercel to .gitignore

* Squashed commit of the following:

commit e91ae9d2f908f69df738b4279dd8087ff6bb14a1
Author: COCO <colomberakotonjanahary@gmail.com>
Date:   Sun Aug 24 19:18:50 2025 +0300

    Feat/income creation page (#11)

    * remove: prisma output custom path

    * chore: move lib folder in server root

    * chore(prisma): remove custom generator output and drop icon_emoji attribute from IncomeCategory model

    * feat(client): add income models

    * feat(server): implement income controller with full CRUD operations

    * feat(server): implement income category controller

    * feat(server): asyncHandler utility

    * refactor: separate controller and service logic for cleaner architecture

    * refactor: unify income and income-category controllers

    * feat: income routes

    * feat: GET /custom-categories endpoint to fetch categories created by the user

    * fix: correct income controller exports

    * chore: add temporary middleware to mock user (id: 4) for testing

    * fix(server): handle missing date field in income creation

    * fix(server): resolve invalid date type error

    * chore(api): make income.date optional and require category_id in OpenAPI spec

    * feat(client): implement income service

    * feat(client): custom react hooks for income data

    * feat: react-router-dom and setup initial routes for home and incomes

    * feat(client): income component and incomes page with full functionality

    * refactor: rename endpoints to /custom-categories in API spec and server to differenciate customized and system in built categories

    * feat: implement theme colors and fonts

    * feat: expandable sidebar

    * feat: setup theme colors and font

    * remove: icon_emoji column from income_category

    * fix: comprehensive error handling and validation for income categories

    * chore: regenerate openapi service after spec update

    * style: enhance loading component

    * f

--- a/server/docs/Expense Tracker API.yaml
+++ b/server/docs/Expense Tracker API.yaml
@@ -143,12 +143,6 @@ paths:
           description: Expense updated
     delete:
       summary: Delete an expense
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
       responses:
         "204":
           description: Expense deleted
@@ -221,12 +215,6 @@ paths:
           description: Income updated
     delete:
       summary: Delete an income entry
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
       responses:
         "204":
           description: Income deleted
@@ -248,6 +236,9 @@ paths:
               properties:
                 name:
                   type: string
+                icon_url:
+                  type: string
+                  nullable: true
       responses:
         "201":
           description: Category created
@@ -338,18 +329,38 @@ paths:
       responses:
         "200":
           description: Profile info
-    put:
+    patch:
       summary: Update user profile
+      description: Update username for the authenticated user
       requestBody:
         required: true
         content:
           application/json:
             schema:
               type: object
+              properties:
+                username:
+                  type: string
+                  minLength: 3
+                  maxLength: 50
+                  pattern: '^[A-Za-z0-9_-]{3,50}$'
+                firstname:
+                  type: string
+                  maxLength: 100
+                lastname:
+                  type: string
+                  maxLength: 100
       responses:
         "200":
-          description: Profile updated
-
+          description: Public user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'
+        "400":
+          description: Invalid username
+        "401":
+          description: Unauthorized
   /user/profile/password:
     patch:
       summary: Update user password
@@ -362,3 +373,44 @@ paths:
       responses:
         "200":
           description: Password updated
+
+  /auth/me:
+    get:
+      summary: Get current authenticated user
+      responses:
+        "200":
+          description: Public user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PublicUser'
+        "401":
+          description: Unauthorized
+
+  /auth/logout:
+    post:
+      summary: Logout current session
+      responses:
+        "204":
+          description: No Content
+
+components:
+  schemas:
+    PublicUser:
+      type: object
+      required: [user_id, email, created_at]
+      properties:
+        user_id:
+          type: integer
+        email:
+          type: string
+          format: email
+        username:
+          type: [string, 'null']
+        firstname:
+          type: [string, 'null']
+        lastname:
+          type: [string, 'null']
+        created_at:
+          type: string
+          format: date-time
