--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,13 @@
     "api:generate": "openapi --input \"../server/docs/Expense Tracker API.yaml\" --output src/api --client axios"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-charts": "^8.10.2",
+    "@nivo/bar": "^0.99.0",
+    "@nivo/core": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@tailwindcss/vite": "^4.1.11",
     "@vercel/analytics": "^1.5.0",
@@ -21,8 +28,10 @@
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.8"
   },
