--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Create .env for Prisma
+        run: |
+          printf "DATABASE_URL=%s\n" "${{ secrets.DATABASE_URL }}" > .env
+
       - name: Prisma Version
         run: npx prisma -v
 
