--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Create .env for Prisma (CI)
+        run: |
+          printf "DATABASE_URL=%s\n" "${{ secrets.DATABASE_URL || 'postgresql://user:pass@localhost:5432/db' }}" > .env
       - name: Prisma Generate
         run: npm run prisma:generate
       - name: Prisma Validate
