--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
-    "prisma:seed": "node prisma/seed.js"
+    "prisma:seed": "node ./prisma/seed.js"
   },
   "keywords": [
     "express",
