--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.8"
   },
@@ -36,6 +37,7 @@
     "@storybook/react-vite": "^9.1.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
