--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.7",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
