--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -14,8 +14,10 @@ jobs:
   migrate:
     name: Prisma migrate deploy
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DIRECT_URL: ${{ secrets.DIRECT_URL }}
       NODE_ENV: production
     defaults:
       run:
@@ -37,6 +39,15 @@ jobs:
       - name: Create .env for Prisma
         run: |
           printf "DATABASE_URL=%s\n" "${{ secrets.DATABASE_URL }}" > .env
+          printf "DIRECT_URL=%s\n" "${{ secrets.DIRECT_URL }}" >> .env
+
+      - name: Assert DATABASE_URL and DIRECT_URL exist
+        run: |
+          if [ -z "$DATABASE_URL" ]; then
+            echo "::error::DATABASE_URL is empty"; exit 1; fi
+          if [ -z "$DIRECT_URL" ]; then
+            echo "::error::DIRECT_URL is empty"; exit 1; fi
+          echo "Env vars present."
 
       - name: Prisma Version
         run: npx prisma -v
