--- a/server/docs/Expense Tracker API.yaml
+++ b/server/docs/Expense Tracker API.yaml
@@ -283,6 +283,7 @@ paths:
           name: month
           schema:
             type: string
+            example: "2025-08"
       responses:
         "200":
           description: Monthly summary
@@ -343,7 +344,7 @@ paths:
                   type: string
                   minLength: 3
                   maxLength: 50
-                  pattern: '^[A-Za-z0-9_-]{3,50}$'
+                  pattern: "^[A-Za-z0-9_-]{3,50}$"
                 firstname:
                   type: string
                   maxLength: 100
@@ -356,7 +357,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PublicUser'
+                $ref: "#/components/schemas/PublicUser"
         "400":
           description: Invalid username
         "401":
@@ -383,7 +384,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PublicUser'
+                $ref: "#/components/schemas/PublicUser"
         "401":
           description: Unauthorized
 
@@ -406,11 +407,11 @@ components:
           type: string
           format: email
         username:
-          type: [string, 'null']
+          type: [string, "null"]
         firstname:
-          type: [string, 'null']
+          type: [string, "null"]
         lastname:
-          type: [string, 'null']
+          type: [string, "null"]
         created_at:
           type: string
           format: date-time
