--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.7",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
@@ -45,6 +46,7 @@
     "@storybook/react-vite": "^9.1.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
