--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
     "validator": "^13.11.0"
   },
