--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.7",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.541.0",
@@ -32,6 +33,7 @@
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-to-pdf": "^2.0.1",
     "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.8"
