--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@supabase/supabase-js": "^2.57.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "pg": "^8.11.3",
+    "supabase": "^2.39.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
