--- a/server/.env.example
+++ b/server/.env.example
@@ -32,3 +32,8 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_OAUTH_TIMEOUT_MS=10000
 
+
+### SUPABASE CONFIGURATION
+SUPABASE_BUCKET_RECEIPTS=The_name_of_your_bucket
+SUPABASE_SERVICE_ROLE_KEY=The_service_role_key
+SUPABASE_URL=https://xxxx.supabase.co
