feat: GenAI integration for user advices

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@google/genai": "^1.17.0",
     "@mui/material": "^7.3.1",
     "@mui/x-charts": "^8.10.2",
     "@nivo/bar": "^0.99.0",
