--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "jspdf": "^3.0.2",
