--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "react-to-pdf": "^2.0.1",
