--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,14 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-calendar": "^6.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "react-to-pdf": "^2.0.1",
