--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm ci
 
       - name: Lint (optional)
-        run: npm run lint --if-present
+        run: npm run lint --if-present --fix
 
       - name: Build Storybook
         run: npm run build-storybook
