fix(oauth): use deterministic redirect URI from env or request; document GOOGLE_REDIRECT_URI

--- a/server/.env.example
+++ b/server/.env.example
@@ -28,6 +28,9 @@ CORS_ORIGIN=http://localhost:5173
 # Create OAuth 2.0 Client ID (Web) at https://console.cloud.google.com/apis/credentials
 # Authorized redirect URI must include:
 #   http://localhost:8080/api/auth/google/callback
+# In production, set GOOGLE_REDIRECT_URI to your exact deployed callback URL, e.g.:
+#   https://pennypal-ya7b.onrender.com/api/auth/google/callback
+GOOGLE_REDIRECT_URI=https://pennypal-ya7b.onrender.com/api/auth/google/callback
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_OAUTH_TIMEOUT_MS=10000
